Saved hyper-params for 50K

--- a/notebooks/out_of_domain_uncertainty_poor_income_50K/Income_2018_Batch1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_50K/Income_2018_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "460e6a3b",
+   "id": "95fd5079",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "12eec715",
+   "id": "ed4bf1eb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8d417d2c",
+   "id": "f2dc9c90",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9eec2b50",
+   "id": "994c38bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ba7807dd",
+   "id": "42a991e6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "35cd7069",
+   "id": "fffff6d1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.684861Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6a1320b5",
+   "id": "579f7427",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.694009Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e9d6d091",
+   "id": "25ad0974",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:22.482933Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ce8b296",
+   "id": "b6c9a42a",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d563dad4",
+   "id": "b39dd868",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.606024Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba06f1cd",
+   "id": "6970a3af",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "27f57e4f",
+   "id": "8534f599",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.632107Z",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e3673d0",
+   "id": "53808800",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "69954491",
+   "id": "c67c48fc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:25.414123Z",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1a7d39f0",
+   "id": "7be8d647",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:26.176127Z",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0656658f",
+   "id": "3199095d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:36.294376Z",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f550970",
+   "id": "3f88e1ec",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b101323e",
+   "id": "f59e10e2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.449698Z",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6c210156",
+   "id": "c3ec4fc8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.552046Z",
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1b9ad66c",
+   "id": "850f2997",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.446590Z",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3d590850",
+   "id": "9c5c2239",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.523825Z",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "91c2c040",
+   "id": "04410eb9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.525122Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94123ddb",
+   "id": "900d1390",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5638a578",
+   "id": "ae753e1d",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "48a4f8b3",
+   "id": "4def9be6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.589772Z",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "77257ec6",
+   "id": "7228e272",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:10.912300Z",
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1c406db6",
+   "id": "5441c2f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:40:10.165459Z",
@@ -714,7 +714,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-25 10:57:27 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-10-27 12:00:37 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -726,14 +726,16 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '32f0c940-8892-4b94-8af3-7dbe2e795257'}\n"
+      " 'session_uuid': '24b32f8d-94f4-43da-8e78-5607101fbfae'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-25 10:57:27 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-10-27 12:00:37 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -741,14 +743,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In-domain full_df.shape --  (80000, 9)\n"
+      "In-domain full_df.shape --  (60000, 9)\n",
+      "In-domain init_features_df.shape --  (60000, 10)\n",
+      "In-domain number of rows in X_train_val --  50000\n",
+      "In-domain number of rows in X_test --  10000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-25 10:57:29 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-10-27 12:00:38 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -756,9 +761,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In-domain init_features_df.shape --  (80000, 10)\n",
-      "In-domain number of rows in X_train_val --  70000\n",
-      "In-domain number of rows in X_test --  10000\n",
       "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
       "Out-of-domain 1 number of rows in X_train_val --  0\n",
       "Out-of-domain 1 number of rows in X_test --  10000\n"
@@ -767,7 +769,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ad95dea35b042668e7dc44667fe6d61",
+       "model_id": "fc56ad114b3344a1a49ec14bd0db0c7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -782,7 +784,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-25 10:57:29 experiment_interface.py INFO    : Start fairness intervention\n"
+      "2023-10-27 12:00:38 experiment_interface.py INFO    : Start fairness intervention\n",
+      "INFO:root:Start fairness intervention\n"
      ]
     },
     {
@@ -796,8 +799,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Start fairness intervention\n",
-      "2023-10-25 11:03:27 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-10-27 12:06:39 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -882,8 +884,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.891672</td>\n",
-       "      <td>0.101823</td>\n",
+       "      <td>0.890129</td>\n",
+       "      <td>0.101414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -906,8 +908,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.304918</td>\n",
-       "      <td>1.259671</td>\n",
+       "      <td>0.302932</td>\n",
+       "      <td>1.257089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -930,8 +932,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.933787</td>\n",
-       "      <td>0.101823</td>\n",
+       "      <td>-0.936705</td>\n",
+       "      <td>0.101414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -954,8 +956,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.607812</td>\n",
-       "      <td>-2.677012</td>\n",
+       "      <td>-0.610485</td>\n",
+       "      <td>-2.672205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38923</th>\n",
@@ -978,12 +980,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.761283</td>\n",
-       "      <td>0.487773</td>\n",
+       "      <td>0.759640</td>\n",
+       "      <td>0.486639</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 791 columns</p>\n",
+       "<p>5 rows × 776 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1009,13 +1011,13 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.891672   0.101823  \n",
-       "25747          0.0          0.0          0.0   0.304918   1.259671  \n",
-       "13795          0.0          0.0          0.0  -0.933787   0.101823  \n",
-       "68724          0.0          0.0          0.0  -0.607812  -2.677012  \n",
-       "38923          0.0          0.0          0.0   0.761283   0.487773  \n",
+       "22422          0.0          0.0          0.0   0.890129   0.101414  \n",
+       "25747          0.0          0.0          0.0   0.302932   1.257089  \n",
+       "13795          0.0          0.0          0.0  -0.936705   0.101414  \n",
+       "68724          0.0          0.0          0.0  -0.610485  -2.672205  \n",
+       "38923          0.0          0.0          0.0   0.759640   0.486639  \n",
        "\n",
-       "[5 rows x 791 columns]"
+       "[5 rows x 776 columns]"
       ]
      },
      "metadata": {},
@@ -1105,8 +1107,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.282842</td>\n",
-       "      <td>0.101823</td>\n",
+       "      <td>1.281593</td>\n",
+       "      <td>0.101414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1129,8 +1131,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.543622</td>\n",
-       "      <td>-2.368252</td>\n",
+       "      <td>1.542569</td>\n",
+       "      <td>-2.364025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1153,8 +1155,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.435308</td>\n",
-       "      <td>0.101823</td>\n",
+       "      <td>0.433420</td>\n",
+       "      <td>0.101414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1177,8 +1179,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.455346</td>\n",
-       "      <td>-0.670075</td>\n",
+       "      <td>-1.458657</td>\n",
+       "      <td>-0.669036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38923</th>\n",
@@ -1201,12 +1203,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.520541</td>\n",
-       "      <td>-1.056025</td>\n",
+       "      <td>-1.523902</td>\n",
+       "      <td>-1.054260</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 791 columns</p>\n",
+       "<p>5 rows × 776 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1232,13 +1234,13 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   1.282842   0.101823  \n",
-       "25747          0.0          0.0          0.0   1.543622  -2.368252  \n",
-       "13795          0.0          0.0          0.0   0.435308   0.101823  \n",
-       "68724          0.0          0.0          0.0  -1.455346  -0.670075  \n",
-       "38923          0.0          0.0          0.0  -1.520541  -1.056025  \n",
+       "22422          0.0          0.0          0.0   1.281593   0.101414  \n",
+       "25747          0.0          0.0          0.0   1.542569  -2.364025  \n",
+       "13795          0.0          0.0          0.0   0.433420   0.101414  \n",
+       "68724          0.0          0.0          0.0  -1.458657  -0.669036  \n",
+       "38923          0.0          0.0          0.0  -1.523902  -1.054260  \n",
        "\n",
-       "[5 rows x 791 columns]"
+       "[5 rows x 776 columns]"
       ]
      },
      "metadata": {},
@@ -1248,22 +1250,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/25, 11:03:27: Tuning RandomForestClassifier...\n",
-      "2023/10/25, 13:56:24: Tuning for RandomForestClassifier is finished [F1 score = 0.7498909468786255, Accuracy = 0.8035428907356601]\n"
+      "2023/10/27, 12:06:39: Tuning RandomForestClassifier...\n",
+      "2023/10/27, 13:24:18: Tuning for RandomForestClassifier is finished [F1 score = 0.7487131163777848, Accuracy = 0.8024800514430129]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-25 13:56:24 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-10-27 13:24:18 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f566d5dec1b74efc97fe48a074235493",
+       "model_id": "520bc3e8534348569feb1d0675617875",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1277,7 +1280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55ee9bf2b85646a7895f57f997762760",
+       "model_id": "2428292d33404a7db8bc6d717b77572b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1309,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df18aa8b",
+   "id": "af3de16e",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1318,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "651bc7e0",
+   "id": "cbd962f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f40c0d93",
+   "id": "272b2c81",
    "metadata": {},
    "outputs": [
     {
@@ -2415,7 +2418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66dd120b",
+   "id": "3ee8dc19",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2424,7 +2427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d079da61",
+   "id": "fc5eafc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2445,7 +2448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e86fb5b4",
+   "id": "6632ad71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2468,7 +2471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2820b379",
+   "id": "ad1dbb0c",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2477,7 +2480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f2c9e3b",
+   "id": "2bb62a1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2498,7 +2501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5fc176e",
+   "id": "e9a1dfbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2521,7 +2524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e11e7f7",
+   "id": "19e9cb96",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2530,7 +2533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd840316",
+   "id": "840086b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2551,7 +2554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "845f3c3d",
+   "id": "faeb94aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2574,7 +2577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f8c090a",
+   "id": "8191e4ad",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2583,7 +2586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fc0d48a",
+   "id": "ddf90a3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2604,7 +2607,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f1ebf96d",
+   "id": "a2248dee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2633,7 +2636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4639efe",
+   "id": "30b97473",
    "metadata": {},
    "outputs": [],
    "source": []
